# dota2vod

./: AGENTS.md  Dockerfile  README.md  pyproject.toml
dota2vod/: __init__.py  cli.py  detect.py  probe.py  segments.py
tests/: conftest.py  test_detect.py  test_e2e.py  test_real_frames.py  test_segments.py
